--- a/app/design/frontend/base/default/template/customer/form/forgotpassword.phtml
+++ b/app/design/frontend/base/default/template/customer/form/forgotpassword.phtml
@@ -11,11 +11,11 @@
 
 /** @var Mage_Customer_Block_Account_Forgotpassword $this */
 ?>
-<div class="dialog__header">
+<div class="d-header">
     <h2><?= $this->__('Retrieve your password') ?></h2>
-    <button type="button" class="dialog__close" id="dialog-close-btn" aria-label="<?= $this->__('Close') ?>">&times;</button>
+    <button type="button" class="d-close" id="dialog-close-btn" aria-label="<?= $this->__('Close') ?>">&times;</button>
 </div>
-<div class="dialog__content">
+<div class="d-content">
     <form action="<?= $this->getUrl('*/*/forgotpasswordpost') ?>" method="post" id="form-validate-forgot">
         <div class="fieldset">
             <ul class="form-list">
@@ -28,7 +28,7 @@
                 <?= $this->getChildHtml('form.additional.info') ?>
             </ul>
         </div>
-        <div class="dialog__actions">
+        <div class="d-actions">
             <button type="button" class="button" onclick="this.closest('dialog').close()"><?= $this->__('Cancel') ?></button>
             <button type="submit" title="<?= $this->quoteEscape($this->__('Submit')) ?>" class="button"><?= $this->__('Submit') ?></button>
         </div>
